[gd_scene load_steps=15 format=3 uid="uid://r3gejgdjnjls"]

[ext_resource type="Script" path="res://Scripts/loot_drop.gd" id="1_6tseq"]
[ext_resource type="Texture2D" uid="uid://beo24tjxdq3vy" path="res://Assets/Tilesets/dungeon_tiles_2.png" id="2_7u3c1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hcqay"]
atlas = ExtResource("2_7u3c1")
region = Rect2(304, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgkfn"]
atlas = ExtResource("2_7u3c1")
region = Rect2(336, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xem1"]
atlas = ExtResource("2_7u3c1")
region = Rect2(304, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1nx6"]
atlas = ExtResource("2_7u3c1")
region = Rect2(320, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsxyw"]
atlas = ExtResource("2_7u3c1")
region = Rect2(336, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jamkp"]
atlas = ExtResource("2_7u3c1")
region = Rect2(336, 416, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vterv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcqay")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgkfn")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xem1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1nx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsxyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jamkp")
}],
"loop": true,
"name": &"opened",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_h2fb7"]
resource_name = "fadeAway"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4ixvx"]
resource_name = "fadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nim8g"]
_data = {
"fadeAway": SubResource("Animation_h2fb7"),
"fadeIn": SubResource("Animation_4ixvx")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_gtnsa"]
radius = 15.0333

[sub_resource type="CircleShape2D" id="CircleShape2D_rc52e"]
radius = 5.0

[node name="loot_drop" type="Node2D"]
script = ExtResource("1_6tseq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_vterv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_nim8g")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="PickableArea" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_gtnsa")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_rc52e")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
